tests/ui/suggestions/abi-typo.stderr
error[E0703]: invalid ABI: found `systen`
  --> $DIR/abi-typo.rs:2:8
   |
LL | extern "systen" fn systen() {}
   |        ^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
help: there's a similarly named valid ABI `system`
   |
LL - extern "systen" fn systen() {}
LL + extern "system" fn systen() {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0703`.
