tests/ui/suggestions/abi-typo.rs
//@ run-rustfix
extern "systen" fn systen() {} //~ ERROR invalid ABI

fn main() {
    systen();
}
